test: rule engine test refactor to fix random failures (the most issues was related to the cache that was not transaction aware)